MDEV-10006: optimizer doesn't convert outer join to inner on views with WHERE clause

When simplify_joins() converts an outer join to an inner, it should
reset the value of TABLE::dep_tables.  This is needed, because the
function may have already set TABLE::dep_tables according to the outer
join dependency.